2001-10-16  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-auth.c (compute_response): A NULL passwd is
	perfectly valid, so we want to avoid crashing if that is the case.

2001-10-16  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-transfer.c (decode_chunk): Fix nasty chunked
	encoding bug when the message is set to truncate chunks. Code
	reorg to be a lot cleaner.

	* src/libsoup/soup-ntlm.c: Move alloca #define-foo to:
	* src/libsoup/soup-private.h: Here.

	* src/libsoup/soup-uri.c (soup_uri_to_string): Handle the case
	where path does not begin with a '/'.

	* src/libsoup/soup-server.c (soup_server_free): Use foreach_remove.

2001-10-09  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socks.c (soup_connect_socks_proxy): Assign
	source connection correctly.

2001-10-09  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-dav-server.c (parent_exists): don't call
	__uri_exists as __is_collection should check this.

2001-10-06  Alex Graveley  <alex@ximian.com>

	* configure.in (enable_nss): Explicitly add libplc4 and libplds4
	which are dependencies of libnspr4.

	* src/libsoup/Makefile.am (libsoup_la_LIBADD): Link with NSS libs.
	(libsoup_la_SOURCES): Add soup-nss.[ch].

	* src/libsoup/soup-nss.c: Added. GIOChannel wrapper for Mozills NSS.

	* src/libsoup/soup-ssl.c: Use NSS if available to avoid out of
	process SSL proxy.

	* src/soup-ssl-proxy/Makefile.am (soup_ssl_proxy_SOURCES): Remove
	soup-nss.[ch].
	(soup_ssl_proxy_LDADD): Do not link NSS libs, as these are now
	linked directly into libsoup.

2001-10-05  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (soup_message_clear_headers):
	Impl. Use instead of custom header free funcs throughout.
	(soup_message_foreach_header): Impl.
	(global_handlers): Handle redirects before authenticating.
	(redirect_handler): Use soup_message_get_header.
	(run_handler): Ditto.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket-unix.c (soup_address_new_cb): Ugg. Don't